--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "typeface-rubik": "^1.1.13",
     "typescript": "^4.1.2"
   },
   "scripts": {
